--- a/html/about.html
+++ b/html/about.html
@@ -50,53 +50,62 @@
         <main class="container">
             <div class="card-container">
                 <div class="card"></div>
-                <div class="card-text">
-                    <p>
-                        A cada dia que passa sempre busco aprender mais, 
-                        seja para melhorar como pessoa ou profissionalmente. 
-                        Principalmente sobre aquilo que desconheço, pois me 
-                        interesso sobre aquilo que ainda não sei. Frequentemente 
-                        assisto vídeos informativos sobre tecnologia e desenvolvimento. 
-                        Sou originário de Araçatuba - São Paulo, e um dia pretendo me 
-                        mudar para uma cidade com melhores condições de vida.
-                    </p>
-                    <p>
-                        Atualmente estou cursando a faculdade de Tecnologia em Sistemas 
-                        para Internet, possuo Inglês avançado, tenho muita experiência 
-                        com Excel e sou intermediário nas linguagens Python, C++ e C#, 
-                        me considero como um desenvolvedor Back-end mas sei me virar com 
-                        o Front-end, ainda não posso dizer que sou Fullstack pois ainda 
-                        me falta mais conhecimento em CSS e HTML.
-                    </p>
-                    <h3>Graduações</h3>
-                    <p>
-                        Ensino Fundamental I
-                        <ul>
-                            <li>EMEB Camila Tomashinsky</li>
-                            <li>Colégio Bom Pastor</li>
-                        </ul>
-                        Ensino Fundamental II
-                        <ul>
-                            <li>Colégio Bom Pastor (2013-2016)</li>
-                        </ul>
-                        Ensino Médio
-                        <ul>
-                            <li>Colégio Integrado (2017-2019)</li>
-                        </ul>
-                        Ensino Superior
-                        <ul>
-                            <li>IFSP - Campus Birigui. Tecnologia em Sistemas para Internet (2020-atualmente)</li>
-                        </ul>
-                        SENAI
-                        <ul>
-                            <li>Mecânico de Automóveis Leves (2017-2018)</li>
-                        </ul>
-                        Inglês
-                        <ul>
-                            <li>Yázigi (2014-2019)</li>
-                        </ul>
-                    </p>                    
-                </div>
+                    <div class="card-text">
+                        <p class="resume">
+                            A cada dia que passa sempre busco aprender mais, 
+                            seja para melhorar como pessoa ou profissionalmente. 
+                            Principalmente sobre aquilo que desconheço, pois me 
+                            interesso sobre aquilo que ainda não sei. Frequentemente 
+                            assisto vídeos informativos sobre tecnologia e desenvolvimento. 
+                            Sou originário de Araçatuba - São Paulo, e um dia pretendo me 
+                            mudar para uma cidade com melhores condições de vida.
+                            <br> <br>
+                            Atualmente estou cursando a faculdade de Tecnologia em Sistemas 
+                            para Internet, possuo Inglês avançado, tenho muita experiência 
+                            com Excel e sou intermediário nas linguagens Python, C++ e C#, 
+                            me considero como um desenvolvedor Back-end mas sei me virar com 
+                            o Front-end, ainda não posso dizer que sou Fullstack pois ainda 
+                            me falta mais conhecimento em CSS e HTML.
+                        </p>
+                        <h3>Formações Acadêmicas</h3>
+                        <h4>Ensino Fundamental I</h4>
+                        <p>
+                            <ul>
+                                <li>EMEB Camila Tomashinsky</li>
+                                <li>Colégio Bom Pastor</li>
+                            </ul>
+                        </p>
+                        <h4>Ensino Fundamental II</h4>
+                        <p>
+                            <ul>
+                                <li>Colégio Bom Pastor (2013-2016)</li>
+                            </ul>
+                        </p>
+                        <h4>Ensino Médio</h4>
+                        <p>
+                            <ul>
+                                <li>Colégio Integrado (2017-2019)</li>
+                            </ul>
+                        </p>
+                        <h4>Ensino Superior</h4>
+                        <p>
+                            <ul>
+                                <li>IFSP - Campus Birigui. Tecnologia em Sistemas para Internet (2020-atualmente)</li>
+                            </ul>
+                        </p>
+                        <h4>Cursos</h4>
+                        <p>
+                            <ul>
+                                <li>SENAI - Mecânico de Automóveis Leves (2017-2018)</li>
+                                <li>Yázigi - Inglês (2014-2019)</li>
+                                <li>Udemy - Curso Web Frontend Fundamentos (Em Andamento)</li>
+                                <li>Na Prática - CC50 (Em Andamento)</li>
+                                <li>FIAP ON - Programa eu Capacito (Em Andamento)</li>
+                                <li>Coursera + UNICAMP - Introdução ao Desenvolvimento de Aplicativos Android (Em Andamento)</li>
+                                <li>LinuxTips - Docker Essentials (Em Andamento)</li>
+                            </ul>
+                        </p>            
+                    </div>
             </div>
         </main>
        
