--- a/html/projects.html
+++ b/html/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/projects.css">
     <title>Projetos</title>
 </head>
 <body>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="card-text">
-                <p>Macaco Fumante</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, dicta iure? Hic fuga quam temporibus illum quis nulla ad! Nulla minus magnam sed numquam deleniti, rem eum delectus distinctio nostrum reiciendis voluptatem at possimus est fuga, ad ratione eaque quo repellat dolor dignissimos corporis nisi non explicabo excepturi. Numquam, amet.</p>
             </div>
         </div>        
     </main>
