--- a/html/projects.html
+++ b/html/projects.html
@@ -41,14 +41,23 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Projeto 1</h2>
-                    <p>Vem ver!</p>
+                    <h2>Bot Relatórios</h2>
                 </div>
             </div>
             <div class="card-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, dicta iure? Hic fuga quam temporibus illum quis nulla ad! Nulla minus magnam sed numquam deleniti, rem eum delectus distinctio nostrum reiciendis voluptatem at possimus est fuga, ad ratione eaque quo repellat dolor dignissimos corporis nisi non explicabo excepturi. Numquam, amet.</p>
+                <p>Este é um bot criado para automatizar a emissão de relatórios do sistema onde trabalho, e atualiza em uma planilha do excel. Em acordo com a lei de proteção de dados não posso demonstrar o projeto funcionando mas posso mostrar o código que criei para que o Bot funcione.</p>
             </div>
         </div>        
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 2</h2>
+                </div>
+            </div>
+            <div class="card-text">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi numquam impedit ad, nesciunt quam beatae animi saepe quas rerum unde incidunt minus ex facilis cumque non. Atque, minus nihil.</p>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
