--- a/html/projects.html
+++ b/html/projects.html
@@ -51,11 +51,11 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Projeto 2</h2>
+                    <h2>Página Web</h2>
                 </div>
             </div>
             <div class="card-text">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum excepturi numquam impedit ad, nesciunt quam beatae animi saepe quas rerum unde incidunt minus ex facilis cumque non. Atque, minus nihil.</p>
+                <p>Este projeto está sendo desenvolvido junto à disciplina "Programação para Web", utilizando as tecnologias Java, Javascript, Docker, Spring Tool Suite, MySQL, HTML5, CSS, React e Rest. O projeto ainda está em fase de desenvolvimento.</p>
             </div>
         </div>
     </main>
