--- a/html/projects.html
+++ b/html/projects.html
@@ -39,23 +39,33 @@
 
     <main class="container">
         <div class="card-container">
-            <div class="card">
+            <div id="card-1">
                 <div class="card-wrapper">
                     <h2>Bot Relatórios</h2>
                 </div>
             </div>
             <div class="card-text">
-                <p>Este é um bot criado para automatizar a emissão de relatórios do sistema onde trabalho, e atualiza em uma planilha do excel. Em acordo com a lei de proteção de dados não posso demonstrar o projeto funcionando mas posso mostrar o código que criei para que o Bot funcione.</p>
+                <p>Este é um bot criado para automatizar a emissão de relatórios do sistema onde trabalho, e atualiza em uma planilha do excel. Em acordo com a lei de proteção de dados não posso demonstrar o projeto funcionando mas posso mostrar o código que criei para que o Bot funcione. Clique neste <a href="https://github.com/MarcosBrambila/BotRelatorios">link</a> para ver os códigos no GitHub</p>
             </div>
         </div>        
         <div class="card-container">
-            <div class="card">
+            <div id="card-2">
                 <div class="card-wrapper">
                     <h2>Página Web</h2>
                 </div>
             </div>
             <div class="card-text">
-                <p>Este projeto está sendo desenvolvido junto à disciplina "Programação para Web", utilizando as tecnologias Java, Javascript, Docker, Spring Tool Suite, MySQL, HTML5, CSS, React e Rest. O projeto ainda está em fase de desenvolvimento.</p>
+                <p>Este projeto está sendo desenvolvido junto à disciplina "Programação para Web", utilizando as tecnologias Java, Javascript, Docker, Spring Tool Suite, MySQL, HTML5, CSS, React e Rest. O projeto ainda está em fase de desenvolvimento. Clique neste <a href="https://github.com/MarcosBrambila/ProjetoPPWI4">link</a> para ver os códigos no GitHub</p>
+            </div>
+        </div>
+        <div class="card-container">
+            <div id="card-3">
+                <div class="card-wrapper">
+                    <h2>Portfólio</h2>
+                </div>
+            </div>
+            <div class="card-text">
+                <p>Este próprio Portfólio é um dos meus projetos disponíveis no GitHub, futuramente pretendo implementar novas tecnologias como o React. Clique neste <a href="https://github.com/MarcosBrambila/PortfolioPessoal">link</a> para ver os códigos no GitHub</p>
             </div>
         </div>
     </main>
