--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Marcos Brambila">
     <meta name="description" content="Portfólio de apresentação sobre Marcos Brambila">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfólio</title>
+    <title>Portfóli</title>
 </head>
 
 <body>
